--- a/articles/cognitive-services/personalizer/toc.yml
+++ b/articles/cognitive-services/personalizer/toc.yml
@@ -11,6 +11,9 @@
     - name: Neues
       href: whats-new.md
       displayName: 'release notes, service updates, videos'
+    - name: Häufig gestellte Fragen zur Personalisierung
+      href: frequently-asked-questions.md
+      displayName: 'frequently asked questions, troubleshooting, questions'
 - name: Schnellstart
   href: ./quickstart-personalizer-sdk.md
 - name: Beispiele
@@ -123,7 +126,5 @@
       href: /learn/browse/?terms=personalizer
     - name: Support- und Hilfeoptionen
       href: ../cognitive-services-support-options.md?context=/azure/cognitive-services/personalizer/context/context
-    - name: Problembehandlung
-      href: troubleshooting.md
     - name: Azure-Updates
       href: 'https://go.microsoft.com/fwlink/?linkid=2092153'
