--- a/articles/digital-twins/index.yml
+++ b/articles/digital-twins/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: philmea
   ms.author: philmea
   ms.date: 02/12/2020
-  ms.openlocfilehash: 33448df1c225d3593601fd1a1d3a7205628cbd77
-  ms.sourcegitcommit: 4a54c268400b4158b78bb1d37235b79409cb5816
+  ms.openlocfilehash: 72bff0ff2974dda93c7d25027efa82b9d8d1d629
+  ms.sourcegitcommit: 02d443532c4d2e9e449025908a05fb9c84eba039
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 04/28/2021
-  ms.locfileid: "108139019"
+  ms.lasthandoff: 05/06/2021
+  ms.locfileid: "108772655"
 landingContent:
 - title: Über Azure Digital Twins
   linkLists:
@@ -53,10 +53,10 @@ landingContent:
       url: tutorial-end-to-end.md
 - title: Entwickeln
   linkLists:
-  - linkListType: how-to-guide
+  - linkListType: concept
     links:
-    - text: Verwenden der Azure Digital Twins-Befehlszeilenschnittstelle
-      url: how-to-use-cli.md
+    - text: Befehlssatz der Azure Digital Twins-Befehlszeilenschnittstelle
+      url: concepts-cli.md
   - linkListType: how-to-guide
     links:
     - text: Einrichten einer Instanz und der Authentifizierung
@@ -71,18 +71,14 @@ landingContent:
     links:
     - text: REST-APIs
       url: /rest/api/azure-digitaltwins/
-  - linkListType: how-to-guide
+  - linkListType: concept
     links:
-    - text: Verwenden der Azure Digital Twins-APIs und SDKs
-      url: how-to-use-apis-sdks.md
+    - text: Azure Digital Twins-APIs und -SDKs
+      url: concepts-apis-sdks.md
   - linkListType: how-to-guide
     links:
     - text: Senden von Anforderungen mit Postman
       url: how-to-use-postman.md
-  - linkListType: how-to-guide
-    links:
-    - text: Erstellen benutzerdefinierter SDKs mit AutoRest
-      url: ./how-to-use-apis-sdks.md
 - title: Untersuchen von Codebeispielen
   linkLists:
   - linkListType: sample
