--- a/articles/machine-learning/index.yml
+++ b/articles/machine-learning/index.yml
@@ -13,21 +13,19 @@ metadata:
   author: BlackMist
   ms.date: 09/21/2020
   ms.custom: contperf-fy21q1
-  ms.openlocfilehash: c128830ec7219fd5080c2c348542c736af4eef5a
-  ms.sourcegitcommit: ad921e1cde8fb973f39c31d0b3f7f3c77495600f
+  ms.openlocfilehash: bbf934ef45f66a009c198a5ab0a47b871b419d85
+  ms.sourcegitcommit: 02d443532c4d2e9e449025908a05fb9c84eba039
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 04/25/2021
-  ms.locfileid: "107944979"
+  ms.lasthandoff: 05/06/2021
+  ms.locfileid: "108740913"
 landingContent:
 - title: 'Erste Schritte: Code First'
   linkLists:
   - linkListType: tutorial
     links:
-    - text: Erste Schritte mit Python-Skripts
-      url: tutorial-1st-experiment-sdk-setup-local.md
-    - text: Erste Schritte mit Jupyter Notebook-Instanzen (Python)
-      url: tutorial-1st-experiment-sdk-setup.md
+    - text: Erste Schritte mit Azure Machine Learning
+      url: quickstart-create-resources.md
     - text: Batchrückschluss mit ML-Pipelines (Python)
       url: tutorial-pipeline-batch-scoring-classification.md
 - title: 'Erste Schritte: Wenig oder kein Code'
