--- a/articles/backup/index.yml
+++ b/articles/backup/index.yml
@@ -6,15 +6,15 @@ metadata:
   description: Der Azure Backup-Dienst bietet einfache, sichere und kostengünstige Lösungen, um Ihre Daten zu sichern und aus der Microsoft Azure-Cloud wiederherzustellen.
   ms.service: backup
   ms.topic: landing-page
-  author: dcurwin
-  ms.author: dacurwin
+  author: v-amallick
+  ms.author: v-amallick
   ms.date: 12/01/2019
-  ms.openlocfilehash: ed8bd35ec93c8f61bdf9bb974446337159f6ddb0
-  ms.sourcegitcommit: c27a20b278f2ac758447418ea4c8c61e27927d6a
+  ms.openlocfilehash: bb23dc8b692bfbbad6d44fb0dc78929da4485b63
+  ms.sourcegitcommit: db925ea0af071d2c81b7f0ae89464214f8167505
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 03/03/2021
-  ms.locfileid: "101703816"
+  ms.lasthandoff: 04/15/2021
+  ms.locfileid: "107518986"
 landingContent:
 - title: Weitere Informationen zu Azure Backup
   linkLists:
@@ -84,7 +84,7 @@ landingContent:
       url: backup-azure-vm-backup-faq.yml
     - text: Verwalten von Azure-VM-Sicherungen
       url: backup-azure-manage-vms.md
-- title: Sichern von Azure Managed Disks (Vorschau)
+- title: Sichern von Azure Managed Disks
   linkLists:
   - linkListType: concept
     links:
@@ -95,7 +95,7 @@ landingContent:
     - text: Sichern von Azure Managed Disks
       url: backup-managed-disks.md
     - text: 'Häufig gestellte Fragen: Azure Managed Disks'
-      url: disk-backup-faq.md
+      url: disk-backup-faq.yml
     - text: Problembehandlung für die Azure Managed Disks-Sicherung
       url: disk-backup-troubleshoot.md
 - title: Sichern von SQL Server auf virtuellen Azure-Computern
@@ -105,7 +105,7 @@ landingContent:
     - text: Informationen zur Sicherung von SQL Server auf virtuellen Azure-Computern
       url: backup-azure-sql-database.md
     - text: 'Häufig gestellte Fragen: Sicherung von SQL Server auf virtuellen Azure-Computern'
-      url: faq-backup-sql-server.md
+      url: faq-backup-sql-server.yml
     - text: Sichern von SQL Server-Datenbanken auf virtuellen Azure-Computern
       url: backup-sql-server-database-azure-vms.md
     - text: Verwalten und Überwachen gesicherter SQL Server-Datenbanken
@@ -119,7 +119,7 @@ landingContent:
     - text: Verwalten und Überwachen gesicherter SAP HANA-Datenbanken
       url: sap-hana-db-manage.md
     - text: 'Häufig gestellte Fragen: Sichern von SAP HANA-Datenbanken auf virtuellen Azure-Computern'
-      url: sap-hana-faq-backup-azure-vm.md
+      url: sap-hana-faq-backup-azure-vm.yml
     - text: Unterstützungsmatrix für die Sicherung von SAP HANA-Datenbanken auf virtuellen Azure-Computern
       url: sap-hana-backup-support-matrix.md
 - title: Sichern von Azure Files-Freigaben
@@ -129,7 +129,7 @@ landingContent:
     - text: Sichern und Wiederherstellen von Azure-Dateifreigaben
       url: backup-afs.md
     - text: 'Häufig gestellte Fragen: Sichern von Azure Files'
-      url: backup-azure-files-faq.md
+      url: backup-azure-files-faq.yml
 - title: Sichern mit dem MARS-Agent (Microsoft Azure Recovery Services)
   linkLists:
   - linkListType: concept
@@ -141,7 +141,7 @@ landingContent:
     - text: Supportmatrix für den MARS-Agent
       url: backup-support-matrix-mars-agent.md
     - text: 'Häufig gestellte Fragen: MARS-Agent'
-      url: backup-azure-file-folder-backup-faq.md
+      url: backup-azure-file-folder-backup-faq.yml
 - title: Sichern mit Microsoft Azure Backup Server (MABS) und DPM
   linkLists:
   - linkListType: concept
@@ -151,7 +151,7 @@ landingContent:
     - text: MABS-/DPM-Unterstützungsmatrix
       url: backup-support-matrix-mabs-dpm.md
     - text: 'Häufig gestellte Fragen: MABS und DPM'
-      url: backup-azure-dpm-azure-server-faq.md
+      url: backup-azure-dpm-azure-server-faq.yml
     - text: Installieren und Aktualisieren von MABS
       url: backup-azure-microsoft-azure-backup.md
 - title: Verwalten im gewünschten Umfang
