--- a/articles/synapse-analytics/sql-data-warehouse/toc.yml
+++ b/articles/synapse-analytics/sql-data-warehouse/toc.yml
@@ -13,7 +13,7 @@
     - name: Cheat Sheet
       href: cheat-sheet.md
     - name: Bewährte Methoden
-      href: sql-data-warehouse-best-practices.md
+      href: ../sql/best-practices-dedicated-sql-pool.md?toc=/azure/synapse-analytics/sql-data-warehouse/toc.json
     - name: Kapazitätsgrenzen
       href: sql-data-warehouse-service-capacity-limits.md
     - name: Häufig gestellte Fragen
