--- a/articles/active-directory-domain-services/index.yml
+++ b/articles/active-directory-domain-services/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.author: justinha
   manager: daveba
   ms.date: 08/01/2019
-  ms.openlocfilehash: be9c98f680d01999d1b27983eb17124d5d522804
-  ms.sourcegitcommit: 8192034867ee1fd3925c4a48d890f140ca3918ce
+  ms.openlocfilehash: cf5536d47970a018316162a0785c0489d1b01b06
+  ms.sourcegitcommit: fc9fd6e72297de6e87c9cf0d58edd632a8fb2552
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 12/05/2020
-  ms.locfileid: "96619694"
+  ms.lasthandoff: 04/30/2021
+  ms.locfileid: "108285482"
 landingContent:
 - title: Informationen zu Azure AD Domain Services
   linkLists:
@@ -33,7 +33,7 @@ landingContent:
     - text: Funktionsweise der Synchronisierung
       url: synchronization.md
     - text: Häufig gestellte Fragen
-      url: faqs.md
+      url: faqs.yml
 - title: Erste Schritte
   linkLists:
   - linkListType: deploy
