--- a/articles/cloud-shell/TOC.yml
+++ b/articles/cloud-shell/TOC.yml
@@ -25,7 +25,7 @@
     - name: Sicherheit
       items:
         - name: Sicherheitsbaseline
-          href: security-baseline.md
+          href: /security/benchmark/azure/baselines/cloud-shell-security-baseline?toc=/azure/cloud-shell/TOC.json
 - name: Anleitungen
   items:
     - name: PowerShell Cloud Shell für Windows-Benutzer
