--- a/articles/confidential-computing/index.yml
+++ b/articles/confidential-computing/index.yml
@@ -5,17 +5,17 @@ metadata:
   title: Azure Confidential Computing
   description: Hier erfahren Sie, wie Azure Confidential Computing zum Schutz verwendeter Daten beiträgt und wie Sie vertrauliche Workloads in der Cloud erstellen.
   ms.service: virtual-machines
-  ms.subservice: workloads
+  ms.subservice: confidential-computing
   ms.topic: landing-page
   author: JBCook
   ms.author: jencook
   ms.date: 09/22/2020
-  ms.openlocfilehash: d41addbcf1c7e5bf673ba0082e5eaa216b5f946d
-  ms.sourcegitcommit: 227b9a1c120cd01f7a39479f20f883e75d86f062
+  ms.openlocfilehash: b5d8550c87d56a7deb257b485722f64a5b8f7131
+  ms.sourcegitcommit: ac035293291c3d2962cee270b33fca3628432fac
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 02/18/2021
-  ms.locfileid: "100652631"
+  ms.lasthandoff: 03/24/2021
+  ms.locfileid: "104955258"
 landingContent:
 - title: Informationen zu Azure Confidential Computing
   linkLists:
