--- a/articles/ddos-protection/TOC.yml
+++ b/articles/ddos-protection/TOC.yml
@@ -35,8 +35,10 @@
       href: ddos-response-strategy.md
     - name: Referenzarchitekturen
       href: ddos-protection-reference-architectures.md
+    - name: Geschäftskontinuität
+      href: ddos-disaster-recovery-guidance.md
     - name: Sicherheitsbaseline
-      href: ../security/fundamentals/ddos-protection-security-baseline.md?toc=%2fazure%2fddos-protection%2ftoc.json
+      href: /security/benchmark/azure/baselines/ddos-protection-security-baseline?toc=%2fazure%2fddos-protection%2ftoc.json?toc=/azure/ddos-protection/TOC.json
 - name: Anleitungen
   items:
     - name: Testen per Simulation
@@ -49,6 +51,8 @@
       href: ddos-protection-partner-onboarding.md
 - name: Verweis
   items:
+    - name: Azure Policy-Integrationen
+      href: policy-reference.md
     - name: Azure CLI
       href: /cli/azure/network/ddos-protection
     - name: Azure PowerShell
