--- a/articles/key-vault/certificates/index.yml
+++ b/articles/key-vault/certificates/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: msmbaldwin
   ms.author: mbaldwin
   ms.date: 04/07/2020
-  ms.openlocfilehash: e7582856bc986b09d4f21b2c94562a2d7eec83dc
-  ms.sourcegitcommit: 15d27661c1c03bf84d3974a675c7bd11a0e086e6
+  ms.openlocfilehash: 320bea6b66e75fcc2887e3183cd3abd1c92ff156
+  ms.sourcegitcommit: 260a2541e5e0e7327a445e1ee1be3ad20122b37e
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 03/09/2021
-  ms.locfileid: "102502670"
+  ms.lasthandoff: 04/21/2021
+  ms.locfileid: "107815196"
 landingContent:
 - title: Zertifikate
   linkLists:
@@ -72,8 +72,8 @@ landingContent:
       url: ../general/overview.md
     - text: Grundlegende Konzepte
       url: ../general/basic-concepts.md
-    - text: Sicherheitsübersicht
-      url: ../general/security-overview.md
+    - text: Sicherheitsfeatures
+      url: ../general/security-features.md
     - text: 'Vorläufiges Löschen: Übersicht'
       url: ../general/soft-delete-overview.md
 - title: Microsoft Learn
