--- a/articles/private-link/toc.yml
+++ b/articles/private-link/toc.yml
@@ -43,6 +43,8 @@
           href: tutorial-private-endpoint-sql-cli.md
 - name: Konzepte
   items:
+    - name: Verfügbarkeit
+      href: availability.md
     - name: Privater Endpunkt
       href: private-endpoint-overview.md
     - name: "Private\_Link-Dienst"
@@ -52,7 +54,7 @@
     - name: Sicherheit
       items:
         - name: Sicherheitsbaseline
-          href: security-baseline.md
+          href: /security/benchmark/azure/baselines/private-link-security-baseline?toc=/azure/private-link/toc.json
 - name: Vorgehensweise
   items:
     - name: Deaktivieren von Netzwerkrichtlinien für einen privaten Endpunkt
