--- a/articles/storage/queues/TOC.yml
+++ b/articles/storage/queues/TOC.yml
@@ -69,15 +69,13 @@
               href: ../common/storage-sas-overview.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
         - name: Autorisieren von Verwaltungsvorgängen
           href: ../common/authorization-resource-provider.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-        - name: Integrierte Sicherheitskontrollen
-          href: ../common/security-baseline.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
         - name: Verwenden von privaten Azure-Endpunkten
           href: ../common/storage-private-endpoints.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
         - name: Sicherheitskontrollen von Azure Policy
           displayName: 'regulatory, compliance, standards, domains'
           href: ../common/security-controls-policy.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
         - name: Sicherheitsbaseline
-          href: ../common/security-baseline.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+          href: /security/benchmark/azure/baselines/storage-security-baseline?toc=%2fazure%2fstorage%2fqueues%2ftoc.json?toc=/azure/storage/queues/TOC.json
     - name: Datenredundanz
       href: ../common/storage-redundancy.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
     - name: Notfallwiederherstellung und Failover
