--- a/articles/ddos-protection/index.yml
+++ b/articles/ddos-protection/index.yml
@@ -4,18 +4,18 @@ summary: Erfahren Sie, wie der Azure DDoS Protection-Standard in Verbindung mit 
 metadata:
   description: Erfahren Sie, wie der Azure DDoS Protection-Standard in Verbindung mit bewährten Anwendungsentwurfsmethoden einen Schutz vor DDoS-Angriffen darstellt.
   keywords: azure ddos protection standard
-  author: yitoh
+  author: aletheatoh
   ms.author: yitoh
   ms.date: 09/04/2019
   ms.service: ddos-protection
   ms.topic: landing-page
   ms.custom: azure-ddos-protection
-  ms.openlocfilehash: 50f871b08e2a945c599f7217ce680669da39af40
-  ms.sourcegitcommit: 1140ff2b0424633e6e10797f6654359947038b8d
+  ms.openlocfilehash: dd35b0eb4800ae830c59d39a11be016804c83826
+  ms.sourcegitcommit: 5f482220a6d994c33c7920f4e4d67d2a450f7f08
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 12/30/2020
-  ms.locfileid: "97813971"
+  ms.lasthandoff: 04/08/2021
+  ms.locfileid: "107102942"
 landingContent:
 - title: Informationen zu Azure DDoS Protection Standard
   linkLists:
