--- a/articles/storage/files/index.yml
+++ b/articles/storage/files/index.yml
@@ -11,13 +11,13 @@ metadata:
   ms.collection: collection
   author: roygara
   ms.author: rogarana
-  ms.date: 08/27/2019
-  ms.openlocfilehash: 1ede53a8e288b14696ca2c30088486478a13a3af
-  ms.sourcegitcommit: c27a20b278f2ac758447418ea4c8c61e27927d6a
+  ms.date: 04/19/2021
+  ms.openlocfilehash: 56879a2b6efc0ae5e7278828a474d0197f37f255
+  ms.sourcegitcommit: 4b0e424f5aa8a11daf0eec32456854542a2f5df0
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 03/03/2021
-  ms.locfileid: "101724199"
+  ms.lasthandoff: 04/20/2021
+  ms.locfileid: "107761707"
 landingContent:
 - title: Informationen zu Azure Files
   linkLists:
@@ -25,24 +25,16 @@ landingContent:
     links:
     - text: Planungshandbuch für Azure Files
       url: storage-files-planning.md
-    - text: Planungshandbuch für die Azure-Dateisynchronisierung
-      url: storage-sync-files-planning.md
     - text: Was ist Azure Files?
       url: storage-files-introduction.md
+    - text: Identitätsbasierte Authentifizierung
+      url: storage-files-active-directory-overview.md
 - title: Erste Schritte
   linkLists:
   - linkListType: get-started
     links:
     - text: 'Erstellen/Verwenden von Dateifreigaben: Windows'
       url: storage-files-quick-create-use-windows.md
-    - text: Erstellen von Premium-Dateifreigaben
-      url: ./storage-how-to-create-file-share.md
-    - text: Verwalten Ihres Servers mit der Azure-Dateisynchronisierung
-      url: storage-sync-files-server-registration.md
-  - linkListType: tutorial
-    links:
-    - text: Erweitern von Windows-Dateiservern mit der Azure-Dateisynchronisierung
-      url: storage-sync-files-extend-servers.md
 - title: Problembehandlung
   linkLists:
   - linkListType: reference
@@ -53,5 +45,3 @@ landingContent:
       url: storage-troubleshoot-linux-file-connection-problems.md
     - text: 'Azure Files: Behandeln von Leistungsproblemen'
       url: storage-troubleshooting-files-performance.md
-    - text: 'Azure-Dateisynchronisierung: Behandeln von Problemen'
-      url: storage-sync-files-troubleshoot.md
