--- a/articles/active-directory/managed-identities-azure-resources/TOC.yml
+++ b/articles/active-directory/managed-identities-azure-resources/TOC.yml
@@ -94,8 +94,6 @@
           href: how-to-use-vm-sign-in.md
         - name: Verwendung mit Azure-SDKs
           href: how-to-use-vm-sdk.md
-        - name: Ersetzen der VM-Erweiterung durch Azure IMDS
-          href: howto-migrate-vm-extension.md
     - name: 'Zuweisen des Zugriffs auf eine andere Azure-Ressource für eine verwaltete Identität:'
       items:
         - name: Portal
@@ -142,7 +140,9 @@
       href: 'https://golang.org/doc/'
 - name: Ressourcen
   items:
-    - name: Häufig gestellte Fragen und bekannte Probleme
+    - name: Häufig gestellte Fragen
+      href: managed-identities-faq.md
+    - name: Bekannte Probleme
       href: known-issues.md
     - name: 'Azure-Dienste, die verwaltete Identitäten für Azure-Ressourcen unterstützen'
       href: services-support-managed-identities.md
