--- a/articles/active-directory/reports-monitoring/toc.yml
+++ b/articles/active-directory/reports-monitoring/toc.yml
@@ -15,8 +15,6 @@
       href: quickstart-download-sign-in-report.md
     - name: Herunterladen eines Überwachungsberichts
       href: quickstart-download-audit-report.md
-    - name: Konfigurieren benannter Orte
-      href: quickstart-configure-named-locations.md
     - name: Senden von Protokollen an ein Speicherkonto
       href: quickstart-azure-monitor-route-logs-to-storage-account.md
 - name: Tutorials
@@ -29,33 +27,29 @@
       href: tutorial-log-analytics-wizard.md
 - name: Konzepte
   items:
-    - name: Planen einer Bereitstellung für Berichterstellung und Überwachung
-      href: plan-monitoring-and-reporting.md
     - name: Überwachungsprotokolle
       href: concept-audit-logs.md
     - name: 'Neue Anmeldeprotokolle: Vorschau'
       href: concept-all-sign-ins.md
     - name: Anmeldeprotokolle
       href: concept-sign-ins.md
-    - name: Nutzungs- und Insights-Bericht
-      href: concept-usage-insights-report.md
-    - name: Riskante Anmeldungen
-      href: ../identity-protection/overview-identity-protection.md
-    - name: Risikoerkennungen
-      href: ../identity-protection/overview-identity-protection.md
-    - name: Gefährdete Benutzer
-      href: ../identity-protection/overview-identity-protection.md
     - name: Bereitstellungsprotokolle
       href: concept-provisioning-logs.md
+    - name: Nutzungs- und Insights-Bericht
+      href: concept-usage-insights-report.md
     - name: Berichterstellungs-APIs
       href: concept-reporting-api.md
     - name: Azure AD-Protokolle in Azure Monitor
       href: concept-activity-logs-azure-monitor.md
+    - name: Planen einer Bereitstellung für Berichterstellung und Überwachung
+      href: plan-monitoring-and-reporting.md
 - name: Anleitungen
   expanded: true
   items:
     - name: Berichte
       items:
+        - name: Herunterladen von Protokollen
+          href: howto-download-logs.md
         - name: "Verwalten inaktiver Benutzerkonten in Azure\_AD"
           href: howto-manage-inactive-user-accounts.md
         - name: Suchen nach Aktivitätsberichten
@@ -107,11 +101,7 @@
       href: reference-reports-data-retention.md
     - name: Wartezeiten bei der Berichterstellung
       href: reference-reports-latencies.md
-    - name: Anmeldefehlercodes
-      href: reference-sign-ins-error-codes.md
     - name: Häufig gestellte Fragen
       href: reports-faq.md
-    - name: Überwachungsprotokollschema
-      href: reference-azure-monitor-audit-log-schema.md
     - name: Anmeldeprotokollschema
       href: reference-azure-monitor-sign-ins-log-schema.md
