--- a/articles/attestation/toc.yml
+++ b/articles/attestation/toc.yml
@@ -5,6 +5,7 @@
     - name: Informationen zu Microsoft Azure Attestation
       href: overview.md
 - name: Schnellstarts
+  expanded: true
   items:
     - name: ARM-Vorlage
       displayName: Resource Manager
@@ -56,7 +57,7 @@
     - name: Azure PowerShell
       href: /powershell/module/az.attestation/#attestation
     - name: Azure CLI
-      href: /cli/azure/ext/attestation/attestation
+      href: /cli/azure/attestation
     - name: Azure-DCAP-Bibliothek für Windows
       href: 'https://www.nuget.org/packages/Microsoft.Azure.DCAP/'
     - name: Azure-DCAP-Bibliothek für Linux
@@ -65,6 +66,6 @@
       href: troubleshoot-guide.md
     - name: TPM- und VBS-Nachweisprotokoll
       href: virtualization-based-security-protocol.md
-    - name: Azure Policy-Integrationen
+    - name: Integrierte Azure Policy-Aktionen
       displayName: 'samples, policies, definitions'
       href: ./policy-reference.md
