--- a/articles/azure-portal/breadcrumb/toc.yml
+++ b/articles/azure-portal/breadcrumb/toc.yml
@@ -5,3 +5,9 @@
     - name: Dokumentation zum Azure-Portal
       tocHref: /azure/azure-portal/
       topicHref: /azure/azure-portal/index
+    - name: Dokumentation zum Azure-Portal
+      tocHref: /azure/virtual-machines/
+      topicHref: /azure/azure-portal/index
+    - name: Dokumentation zum Azure-Portal
+      tocHref: /power-bi
+      topicHref: /azure/azure-portal/index
