--- a/articles/dedicated-hsm/toc.yml
+++ b/articles/dedicated-hsm/toc.yml
@@ -36,6 +36,8 @@
       href: troubleshoot.md
 - name: Verweis
   items:
+    - name: Azure CLI
+      href: /cli/azure/dedicated-hsm
     - name: Azure PowerShell
       href: /powershell/module/Az.DedicatedHsm
 - name: Ressourcen
