--- a/articles/firewall-manager/toc.yml
+++ b/articles/firewall-manager/toc.yml
@@ -46,7 +46,7 @@
     - name: Sicherheit
       items:
         - name: Sicherheitsbaseline
-          href: security-baseline.md
+          href: /security/benchmark/azure/baselines/firewall-manager-security-baseline?toc=/azure/firewall-manager/toc.json
 - name: Anleitungen
   items:
     - name: Bereitstellen von Sicherheitspartneranbietern
@@ -64,7 +64,7 @@
 - name: Verweis
   items:
     - name: Azure CLI
-      href: /cli/azure/ext/azure-firewall/network/firewall/policy
+      href: /cli/azure/network/firewall/policy
     - name: Azure PowerShell
       href: /powershell/module/az.network/new-azfirewallpolicy
     - name: .NET
