--- a/articles/governance/index.yml
+++ b/articles/governance/index.yml
@@ -10,220 +10,202 @@ metadata:
   ms.collection: collection
   author: DCtheGeek
   ms.author: dacoulte
-  ms.date: 01/29/2021
-  ms.openlocfilehash: 9f9d2c694196b48aa4905a3783cb16609727b951
-  ms.sourcegitcommit: 24f30b1e8bb797e1609b1c8300871d2391a59ac2
-  ms.translationtype: HT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 02/10/2021
-  ms.locfileid: "100099131"
+  ms.date: 03/16/2021
 highlightedContent:
   items:
-  - title: Übersicht über Governance
-    itemType: overview
-    url: ./azure-management.md
-  - title: YouTube-Kanal zu Governance
-    itemType: video
-    url: https://www.youtube.com/channel/UCZZ3-oMrVI5ssheMzaWC4uQ
-  - title: Governance im Framework für die Cloudeinführung
-    itemType: architecture
-    url: /azure/architecture/cloud-adoption/governance
-  - title: Erstellen einer Strategie für Cloudgovernance in Azure
-    itemType: learn
-    url: /learn/modules/build-cloud-governance-strategy-azure/
+    - title: Übersicht über Governance
+      itemType: overview
+      url: ./azure-management.md
+    - title: YouTube-Kanal zu Governance
+      itemType: video
+      url: 'https://www.youtube.com/channel/UCZZ3-oMrVI5ssheMzaWC4uQ'
+    - title: Governance im Framework für die Cloudeinführung
+      itemType: architecture
+      url: /azure/architecture/cloud-adoption/governance
+    - title: Erstellen einer Strategie für Cloudgovernance in Azure
+      itemType: learn
+      url: /learn/modules/build-cloud-governance-strategy-azure/
 productDirectory:
   title: Komponenten und Dienste
   items:
-  - title: Azure-Verwaltungsgruppen
-    imageSrc: ./media/management-groups.svg
-    links:
-    - url: ./management-groups/overview.md
-      text: Übersicht
-    - url: ./management-groups/how-to/protect-resource-hierarchy.md
-      text: Schützen der Ressourcenhierarchie
-    - url: ./management-groups/index.yml
-      text: Mehr anzeigen >
-  - title: Azure Policy
-    imageSrc: ./media/azure-policy.svg
-    links:
-    - url: ./policy/overview.md
-      text: Übersicht
-    - url: ./policy/how-to/get-compliance-data.md
-      text: Auswerten der Compliance
-    - url: ./policy/concepts/policy-for-kubernetes.md
-      text: Verwalten der Kubernetes-Konfiguration
-    - url: ./policy/concepts/guest-configuration.md
-      text: Verwalten der VM-Konfiguration
-    - url: ./policy/index.yml
-      text: Mehr anzeigen >
-  - title: Azure Blueprint
-    imageSrc: ./media/azure-blueprints.svg
-    links:
-    - url: ./blueprints/overview.md
-      text: Übersicht
-    - url: ./blueprints/tutorials/protect-new-resources.md
-      text: Schützen von Ressourcen
-    - url: ./blueprints/index.yml
-      text: Mehr anzeigen >
-  - title: Azure Resource Graph
-    imageSrc: ./media/azure-resource-graph.svg
-    links:
-    - url: ./resource-graph/overview.md
-      text: Übersicht
-    - url: ./resource-graph/concepts/explore-resources.md
-      text: Untersuchen von Azure-Ressourcen
-    - url: ./resource-graph/how-to/get-resource-changes.md
-      text: Nachverfolgen von Änderungen
-    - url: ./resource-graph/index.yml
-      text: Mehr anzeigen >
-  - title: Cost Management
-    imageSrc: ./media/cost-management.svg
-    links:
-    - url: ../cost-management-billing/cost-management-billing-overview.md
-      text: Übersicht
-    - url: ../cost-management-billing/costs/aws-integration-manage.md
-      text: Verwalten der AWS-Kosten und des AWS-Verbrauchs
-    - url: ../cost-management-billing/index.yml
-      text: Mehr anzeigen >
+    - title: Azure-Verwaltungsgruppen
+      imageSrc: ./media/management-groups.svg
+      links:
+        - url: ./management-groups/overview.md
+          text: Übersicht
+        - url: ./management-groups/how-to/protect-resource-hierarchy.md
+          text: Schützen der Ressourcenhierarchie
+        - url: ./management-groups/index.yml
+          text: Mehr anzeigen >
+    - title: Azure Policy
+      imageSrc: ./media/azure-policy.svg
+      links:
+        - url: ./policy/overview.md
+          text: Übersicht
+        - url: ./policy/how-to/get-compliance-data.md
+          text: Auswerten der Compliance
+        - url: ./policy/concepts/policy-for-kubernetes.md
+          text: Verwalten der Kubernetes-Konfiguration
+        - url: ./policy/concepts/guest-configuration.md
+          text: Verwalten der VM-Konfiguration
+        - url: ./policy/index.yml
+          text: Mehr anzeigen >
+    - title: Azure Blueprint
+      imageSrc: ./media/azure-blueprints.svg
+      links:
+        - url: ./blueprints/overview.md
+          text: Übersicht
+        - url: ./blueprints/tutorials/protect-new-resources.md
+          text: Schützen von Ressourcen
+        - url: ./blueprints/index.yml
+          text: Mehr anzeigen >
+    - title: Azure Resource Graph
+      imageSrc: ./media/azure-resource-graph.svg
+      links:
+        - url: ./resource-graph/overview.md
+          text: Übersicht
+        - url: ./resource-graph/concepts/explore-resources.md
+          text: Untersuchen von Azure-Ressourcen
+        - url: ./resource-graph/how-to/get-resource-changes.md
+          text: Nachverfolgen von Änderungen
+        - url: ./resource-graph/index.yml
+          text: Mehr anzeigen >
+    - title: Cost Management
+      imageSrc: ./media/cost-management.svg
+      links:
+        - url: ../cost-management-billing/cost-management-billing-overview.md
+          text: Übersicht
+        - url: ../cost-management-billing/costs/aws-integration-manage.md
+          text: Verwalten der AWS-Kosten und des AWS-Verbrauchs
+        - url: ../cost-management-billing/index.yml
+          text: Mehr anzeigen >
 tools:
   title: Beispiele
-  summary: Richtliniendefinitionen, Complianceblaupausen, Ressourcenabfragen und mehr
+  summary: 'Richtliniendefinitionen, Complianceblaupausen, Ressourcenabfragen und mehr'
   items:
-  - title: Azure Policy
-    imageSrc: ./media/azure-policy.svg
-    url: ./policy/samples/index.md
-  - title: Azure Blueprint
-    imageSrc: ./media/azure-blueprints.svg
-    url: ./blueprints/samples/index.md
-  - title: Azure Resource Graph
-    imageSrc: ./media/azure-resource-graph.svg
-    url: ./resource-graph/samples/starter.md
-  - title: Cost Management
-    imageSrc: ./media/cost-management.svg
-    url: https://github.com/Azure-Samples/Cost-Management-Samples
+    - title: Azure Policy
+      imageSrc: ./media/azure-policy.svg
+      url: ./policy/samples/index.md
+    - title: Azure Blueprint
+      imageSrc: ./media/azure-blueprints.svg
+      url: ./blueprints/samples/index.md
+    - title: Azure Resource Graph
+      imageSrc: ./media/azure-resource-graph.svg
+      url: ./resource-graph/samples/starter.md
+    - title: Cost Management
+      imageSrc: ./media/cost-management.svg
+      url: 'https://github.com/Azure-Samples/Cost-Management-Samples'
 additionalContent:
   sections:
-  - title: Entwicklerressourcen
-    items:
-    - title: Verwaltungsgruppen
-      links:
-      - text: Azure CLI
-        url: /cli/azure/account/management-group
-      - text: Azure PowerShell
-        url: /powershell/module/az.resources/#resources
-      - text: Azure SDK für .NET
-        url: /dotnet/api/overview/azure/managementgroups
-      - text: Azure SDK für Go
-        url: https://pkg.go.dev/github.com/Azure/azure-sdk-for-go/services/preview/resources/mgmt/2018-03-01-preview/managementgroups
-      - text: Azure SDK für JavaScript
-        url: /javascript/api/@azure/arm-managementgroups/managementgroups
-      - text: Azure SDK für Python
-        url: /python/api/azure-mgmt-managementgroups/azure.mgmt.managementgroups
-      - text: REST
-        url: /rest/api/resources/managementgroups
-      - text: Resource Manager-Vorlagen
-        url: /azure/templates/microsoft.management/managementgroups
-    - title: Azure Policy
-      links:
-      - text: Azure CLI
-        url: /cli/azure/policy
-      - text: Azure PowerShell
-        url: /powershell/module/az.resources/#policy
-        note: (Richtlinie)
-      - text: Azure PowerShell
-        url: /powershell/module/az.policyinsights#policy-insights
-        note: (Policy Insights)
-      - text: Azure PowerShell
-        url: https://www.powershellgallery.com/packages/Az.GuestConfiguration
-        note: (Gastkonfiguration)
-      - text: REST
-        url: /rest/api/policy-insights/
-        note: (Policy Insights)
-      - text: REST
-        url: /rest/api/resources/policyassignments
-        note: (Arbeitsaufträge)
-      - text: REST
-        url: /rest/api/resources/policydefinitions
-        note: (Definitionen)
-      - text: REST
-        url: /rest/api/resources/policyexemptions
-        note: (Ausnahmen)
-      - text: REST
-        url: /rest/api/resources/policysetdefinitions
-        note: (Initiativen)
-      - text: REST
-        url: /rest/api/guestconfiguration/
-        note: (Gastkonfiguration)
-      - text: Resource Manager-Vorlagen
-        url: /azure/templates/microsoft.authorization/allversions
-    - title: Azure Policy (mehr)
-      links:
-      - text: Azure SDK für .NET
-        url: /dotnet/api/microsoft.azure.management.resourcemanager.models.policyassignment
-        note: (Arbeitsaufträge)
-      - text: Azure SDK für .NET
-        url: /dotnet/api/microsoft.azure.management.resourcemanager.models.policydefinition
-        note: (Richtliniendefinitionen)
-      - text: Azure SDK für JavaScript
-        url: /javascript/api/@azure/arm-policy
-        note: (Richtlinie)
-      - text: Azure SDK für JavaScript
-        url: /javascript/api/@azure/arm-policyinsights
-        note: (Policy Insights)
-      - text: Azure SDK für Python
-        url: /python/api/azure-mgmt-policyinsights/azure.mgmt.policyinsights
-    - title: Azure Blueprint
-      links:
-      - text: Blaupausenfunktionen
-        url: ./blueprints/reference/blueprint-functions.md
-      - text: Azure CLI
-        url: /cli/azure/ext/blueprint/blueprint
-      - text: Azure PowerShell
-        url: /powershell/module/az.blueprint/#blueprint
-      - text: Azure PowerShell
-        url: https://www.powershellgallery.com/packages/Az.Blueprint
-        note: (PS-Katalogmodul)
-      - text: Azure SDK für .NET
-        url: /dotnet/api/overview/azure/blueprints/management
-      - text: REST
-        url: /rest/api/blueprints/
-    - title: Azure Resource Graph
-      links:
-      - text: Azure CLI
-        url: /cli/azure/ext/resource-graph/graph
-      - text: Azure PowerShell
-        url: /powershell/module/az.resourcegraph/#resourcegraph
-      - text: Azure SDK für .NET
-        url: /dotnet/api/Microsoft.Azure.Management.ResourceGraph
-      - text: Azure SDK für .NET
-        url: https://www.nuget.org/packages/Microsoft.Azure.Management.ResourceGraph/
-        note: (NuGet)
-      - text: Azure SDK für Go
-        url: https://godoc.org/github.com/Azure/azure-sdk-for-go/services/resourcegraph/mgmt/2019-04-01/resourcegraph
-      - text: Azure SDK für Java
-        url: /java/api/overview/azure/resourcegraph/management
-      - text: Azure SDK für Java
-        url: https://search.maven.org/artifact/com.microsoft.azure.resourcegraph.v2019_04_01/azure-mgmt-resourcegraph/1.0.0-beta/jar
-        note: (Maven)
-      - text: Azure SDK für JavaScript
-        url: /javascript/api/@azure/arm-resourcegraph
-      - text: Azure SDK für Python
-        url: /python/api/azure-mgmt-resourcegraph/azure.mgmt.resourcegraph
-      - text: Azure SDK für Ruby
-        url: https://rubygems.org/gems/azure_mgmt_resourcegraph
-        note: (Gem)
-      - text: REST
-        url: /rest/api/azure-resourcegraph/
-      - text: Resource Manager-Vorlagen
-        url: /azure/templates/microsoft.resourcegraph/allversions
-    - title: Cost Management
-      links:
-      - text: REST
-        url: /rest/api/cost-management
-        note: (Cost Management)
-      - text: REST
-        url: /rest/api/consumption
-        note: (Verbrauch)
-      - text: Resource Manager-Vorlagen
-        url: /azure/templates/microsoft.consumption/budgets
-  footer: '[UserVoice](https://feedback.azure.com/forums/915958-azure-governance) | [Microsoft Tech Community: Azure Governance](https://techcommunity.microsoft.com/t5/Azure-Governance/bd-p/AzureGovernance) | [Azure-Support](https://azure.microsoft.com/support/create-ticket/)'
+    - title: Entwicklerressourcen
+      items:
+        - title: Verwaltungsgruppen
+          links:
+            - text: Azure CLI
+              url: /cli/azure/account/management-group
+            - text: Azure PowerShell
+              url: /powershell/module/az.resources/#resources
+            - text: Azure SDK für .NET
+              url: /dotnet/api/overview/azure/managementgroups
+            - text: Azure SDK für Go
+              url: 'https://pkg.go.dev/github.com/Azure/azure-sdk-for-go/services/preview/resources/mgmt/2018-03-01-preview/managementgroups'
+            - text: Azure SDK für JavaScript
+              url: /javascript/api/@azure/arm-managementgroups/managementgroups
+            - text: Azure SDK für Python
+              url: /python/api/azure-mgmt-managementgroups/azure.mgmt.managementgroups
+            - text: REST
+              url: /rest/api/managementgroups
+            - text: Resource Manager-Vorlagen
+              url: /azure/templates/microsoft.management/managementgroups
+        - title: Azure Policy
+          links:
+            - text: Azure CLI
+              url: /cli/azure/policy
+            - text: Azure PowerShell
+              url: /powershell/module/az.resources/#policy
+              note: (Policy)
+            - text: Azure PowerShell
+              url: /powershell/module/az.policyinsights#policy-insights
+              note: (Policy Insights)
+            - text: Azure PowerShell
+              url: 'https://www.powershellgallery.com/packages/Az.GuestConfiguration'
+              note: (Guest Configuration)
+            - text: REST
+              url: /rest/api/policy/
+              note: (Policy)
+            - text: REST
+              url: /rest/api/guestconfiguration/
+              note: (Guest Configuration)
+            - text: Resource Manager-Vorlagen
+              url: /azure/templates/microsoft.authorization/allversions
+        - title: Azure Policy (mehr)
+          links:
+            - text: Azure SDK für .NET
+              url: /dotnet/api/microsoft.azure.management.resourcemanager.models.policyassignment
+              note: (Assignments)
+            - text: Azure SDK für .NET
+              url: /dotnet/api/microsoft.azure.management.resourcemanager.models.policydefinition
+              note: (Policy Definitions)
+            - text: Azure SDK für JavaScript
+              url: /javascript/api/@azure/arm-policy
+              note: (Policy)
+            - text: Azure SDK für JavaScript
+              url: /javascript/api/@azure/arm-policyinsights
+              note: (Policy Insights)
+            - text: Azure SDK für Python
+              url: /python/api/azure-mgmt-policyinsights/azure.mgmt.policyinsights
+        - title: Azure Blueprint
+          links:
+            - text: Blaupausenfunktionen
+              url: ./blueprints/reference/blueprint-functions.md
+            - text: Azure CLI
+              url: /cli/azure/blueprint
+            - text: Azure PowerShell
+              url: /powershell/module/az.blueprint/#blueprint
+            - text: Azure PowerShell
+              url: 'https://www.powershellgallery.com/packages/Az.Blueprint'
+              note: (PS Gallery Module)
+            - text: Azure SDK für .NET
+              url: /dotnet/api/overview/azure/blueprints/management
+            - text: REST
+              url: /rest/api/blueprints/
+        - title: Azure Resource Graph
+          links:
+            - text: Azure CLI
+              url: /cli/azure/graph
+            - text: Azure PowerShell
+              url: /powershell/module/az.resourcegraph/#resourcegraph
+            - text: Azure SDK für .NET
+              url: /dotnet/api/Microsoft.Azure.Management.ResourceGraph
+            - text: Azure SDK für .NET
+              url: 'https://www.nuget.org/packages/Microsoft.Azure.Management.ResourceGraph/'
+              note: (NuGet)
+            - text: Azure SDK für Go
+              url: 'https://godoc.org/github.com/Azure/azure-sdk-for-go/services/resourcegraph/mgmt/2019-04-01/resourcegraph'
+            - text: Azure SDK für Java
+              url: /java/api/overview/azure/resourcegraph/management
+            - text: Azure SDK für Java
+              url: 'https://search.maven.org/artifact/com.microsoft.azure.resourcegraph.v2019_04_01/azure-mgmt-resourcegraph/1.0.0-beta/jar'
+              note: (Maven)
+            - text: Azure SDK für JavaScript
+              url: /javascript/api/@azure/arm-resourcegraph
+            - text: Azure SDK für Python
+              url: /python/api/azure-mgmt-resourcegraph/azure.mgmt.resourcegraph
+            - text: Azure SDK für Ruby
+              url: 'https://rubygems.org/gems/azure_mgmt_resourcegraph'
+              note: (Gem)
+            - text: REST
+              url: /rest/api/azure-resourcegraph/
+            - text: Resource Manager-Vorlagen
+              url: /azure/templates/microsoft.resourcegraph/allversions
+        - title: Cost Management
+          links:
+            - text: REST
+              url: /rest/api/cost-management
+              note: (Cost Management)
+            - text: REST
+              url: /rest/api/consumption
+              note: (Consumption)
+            - text: Resource Manager-Vorlagen
+              url: /azure/templates/microsoft.consumption/budgets
+  footer: '[UserVoice](https://feedback.azure.com/forums/915958-azure-governance) | [Microsoft Tech Community - Azure Governance](https://techcommunity.microsoft.com/t5/Azure-Governance/bd-p/AzureGovernance) | [Azure Support](https://azure.microsoft.com/support/create-ticket/)'
