--- a/articles/partner-solutions/toc.yml
+++ b/articles/partner-solutions/toc.yml
@@ -24,3 +24,7 @@
           href: ./datadog/manage.md
         - name: Problembehandlung
           href: ./datadog/troubleshoot.md
+- name: Verweis
+  items:
+    - name: Azure CLI
+      href: /cli/azure/confluent
