--- a/articles/virtual-machines/index.yml
+++ b/articles/virtual-machines/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: cynthn
   ms.author: cynthn
   ms.date: 11/05/2020
-  ms.openlocfilehash: 5b2495f2cf5dbe6714796a4e1f6516cd3a3fe7f4
-  ms.sourcegitcommit: b4647f06c0953435af3cb24baaf6d15a5a761a9c
+  ms.openlocfilehash: 654684ac09a2ea3a11648559bff9ab9dfb556847
+  ms.sourcegitcommit: 772eb9c6684dd4864e0ba507945a83e48b8c16f0
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 03/02/2021
-  ms.locfileid: "101668229"
+  ms.lasthandoff: 03/19/2021
+  ms.locfileid: "104599968"
 landingContent:
 - title: Neueste Features
   linkLists:
@@ -62,13 +62,13 @@ landingContent:
   - linkListType: how-to-guide
     links:
     - text: Behandeln von SSH-Problemen
-      url: ./troubleshooting/troubleshoot-ssh-connection.md
+      url: /troubleshoot/azure/virtual-machines/troubleshoot-ssh-connection
     - text: Behandeln von RDP-Problemen
-      url: ./troubleshooting/rdp.md
+      url: /troubleshoot/azure/virtual-machines/rdp
     - text: Virtueller Linux-Computer startet nicht
-      url: ./troubleshooting/boot-error-troubleshoot-linux.md
+      url: /troubleshoot/azure/virtual-machines/boot-error-troubleshoot-linux
     - text: Virtueller Windows-Computer startet nicht
-      url: ./troubleshooting/boot-error-troubleshoot.md
+      url: /troubleshoot/azure/virtual-machines/boot-error-troubleshoot
     - text: Microsoft Q&A (Fragen und Antworten)
       url: /answers/topics/azure-virtual-machines.html
 - title: Ressourcen
