--- a/articles/vpn-gateway/TOC.yml
+++ b/articles/vpn-gateway/TOC.yml
@@ -60,7 +60,7 @@
     - name: Sicherheit
       items:
         - name: Sicherheitsbaseline
-          href: security-baseline.md
+          href: /security/benchmark/azure/baselines/vpn-gateway-security-baseline?toc=/azure/vpn-gateway/TOC.json
     - name: Interoperabilität der Back-End-Konnektivität
       items:
         - name: Einleitung und Testeinrichtung
@@ -262,6 +262,8 @@
     - name: Problembehandlung
       href: vpn-gateway-troubleshoot.md
       items:
+        - name: Problembehandlung bei Azure VPN Gateway mithilfe von Diagnoseprotokollen
+          href: troubleshoot-vpn-with-azure-diagnostics.md
         - name: Von der Community vorgeschlagene VPN- oder Firewallgeräteeinstellungen
           href: vpn-gateway-third-party-settings.md
         - name: Konfigurieren und Überprüfen von VNet- oder VPN-Verbindungen
@@ -305,7 +307,7 @@
     - name: Azure PowerShell
       href: /powershell/module/az.network#vpn
     - name: Azure PowerShell (klassisch)
-      href: /powershell/module/servicemanagement/azure.service/?view=azuresmps-4.0.0#azure
+      href: /powershell/module/servicemanagement/azure.service/#azure
     - name: REST
       href: /rest/api/network/virtualnetworkgateways
     - name: REST (klassisch)
