commit translated contents

--- a/articles/active-directory/governance/TOC.yml
+++ b/articles/active-directory/governance/TOC.yml
@@ -144,6 +144,6 @@
   expanded: true
   items:
     - name: 'Zugriffsüberprüfung: Graph-API'
-      href: /graph/api/resources/accessreviewsv2-root?view=graph-rest-beta
+      href: /graph/api/resources/accessreviewsv2-root?view=graph-rest-beta&preserve-view=true
     - name: 'Berechtigungsverwaltung: Graph-API'
-      href: /graph/api/resources/entitlementmanagement-root?view=graph-rest-beta
+      href: /graph/api/resources/entitlementmanagement-root?view=graph-rest-beta&preserve-view=true
