--- a/articles/azure-resource-manager/management/index.yml
+++ b/articles/azure-resource-manager/management/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: tfitzmac
   ms.author: tomfitz
   ms.date: 01/02/2020
-  ms.openlocfilehash: 4cdd9b4e93196ddb737861f87882e58f3964a601
-  ms.sourcegitcommit: 6386854467e74d0745c281cc53621af3bb201920
+  ms.openlocfilehash: dba09c46a26b8daf50df546bd38d1aa58868ece3
+  ms.sourcegitcommit: 6f1aa680588f5db41ed7fc78c934452d468ddb84
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 03/08/2021
-  ms.locfileid: "102456027"
+  ms.lasthandoff: 04/19/2021
+  ms.locfileid: "107726554"
 landingContent:
 - title: Informationen zum Azure Resource Manager
   linkLists:
@@ -46,7 +46,7 @@ landingContent:
     - text: Verschieben zwischen Ressourcengruppen und Abonnements
       url: move-resource-group-and-subscription.md
     - text: Regionsübergreifendes Verschieben
-      url: move-region.md
+      url: move-resources-overview.md
     - text: Markieren von Ressourcen
       url: tag-resources.md
     - text: Sperren von Ressourcen
