--- a/articles/security/breadcrumb/TOC.yml
+++ b/articles/security/breadcrumb/TOC.yml
@@ -12,3 +12,25 @@
     - name: Sicherheit
       tocHref: /azure/architecture/
       topicHref: /azure/security/index
+- name: Azure
+  tocHref: /azure/
+  topicHref: /azure/index
+  items:
+    - name: Sicherheit
+      tocHref: /azure/active-directory/
+      topicHref: /azure/Security/index
+      items:
+        - name: Grundlagen
+          tocHref: /azure/active-directory/authentication
+          topicHref: /azure/security/fundamentals/index
+- name: Azure
+  tocHref: /azure/
+  topicHref: /azure/index
+  items:
+    - name: Sicherheit
+      tocHref: /azure/architecture/
+      topicHref: /azure/Security/index
+      items:
+        - name: Grundlagen
+          tocHref: /azure/architecture/framework/security
+          topicHref: /azure/security/fundamentals/index
