--- a/articles/azure-arc/index.yml
+++ b/articles/azure-arc/index.yml
@@ -4,111 +4,106 @@ summary: Vereinfachen Sie komplexe und verteilte Umgebungen in lokalen sowie Edg
 brand: azure
 metadata:
   title: Azure Arc
-  description: Hier erfahren Sie, wie Sie Ressourcen in komplexen und verteilten Umgebungen in lokalen sowie Edge- und multicloudbasierten Infrastrukturen bereitstellen. Azure Arc ermöglicht die globale Bereitstellung von Azure-Diensten und weitet die Azure-Verwaltung auf beliebige Infrastrukturen aus.
+  description: 'Hier erfahren Sie, wie Sie Ressourcen in komplexen und verteilten Umgebungen in lokalen sowie Edge- und multicloudbasierten Infrastrukturen bereitstellen. Azure Arc ermöglicht die globale Bereitstellung von Azure-Diensten und weitet die Azure-Verwaltung auf beliebige Infrastrukturen aus.'
   ms.service: azure-arc
   ms.topic: hub-page
   author: MGoedtel
   ms.author: magoedte
   ms.date: 03/02/2021
-  ms.openlocfilehash: fe751273c39562d7df53b779d609bf84b7248fbc
-  ms.sourcegitcommit: b4647f06c0953435af3cb24baaf6d15a5a761a9c
-  ms.translationtype: HT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 03/02/2021
-  ms.locfileid: "101651143"
+  ms.custom: e2e-hybrid
 highlightedContent:
   items:
-  - title: Informationen zu Azure Arc
-    itemType: overview
-    url: overview.md
-  - title: Schnelleinstieg
-    itemType: sample
-    url: https://azurearcjumpstart.io/overview/
-  - title: Server mit Azure Arc-Unterstützung
-    itemType: overview
-    url: ./servers/overview.md
-  - title: Kubernetes mit Azure Arc-Aktivierung
-    itemType: overview
-    url: ./kubernetes/overview.md
-  - title: Azure Arc-fähige Datendienste (Vorschauversion)
-    itemType: overview
-    url: ./data/overview.md
-  - title: Azure Arc-fähige SQL-Server-Instanz (Vorschauversion)
-    itemType: overview
-    url: /sql/sql-server/azure-arc/overview
+    - title: Informationen zu Azure Arc
+      itemType: overview
+      url: overview.md
+    - title: Schnelleinstieg
+      itemType: sample
+      url: 'https://azurearcjumpstart.io/overview/'
+    - title: Server mit Azure Arc-Unterstützung
+      itemType: overview
+      url: ./servers/overview.md
+    - title: Kubernetes mit Azure Arc-Aktivierung
+      itemType: overview
+      url: ./kubernetes/overview.md
+    - title: "Azure\_Arc-fähige Datendienste (Vorschauversion)"
+      itemType: overview
+      url: ./data/overview.md
+    - title: "Azure\_Arc-fähige SQL-Server-Instanz (Vorschauversion)"
+      itemType: overview
+      url: /sql/sql-server/azure-arc/overview
 productDirectory:
   title: Dienste mit Azure Arc-Unterstützung
   summary: Hier erfahren Sie mehr über die globale Ausführung von Diensten.
   items:
-  - title: Server mit Azure Arc-Unterstützung
-    imageSrc: ./media/manage-450-machines-azure-arc.svg
-    links:
-    - url: ./servers/onboard-portal.md
-      text: Verbinden von Computern mit Azure Arc über das Azure-Portal
-    - url: ./servers/onboard-service-principal.md
-      text: Verbinden von Computern im großen Stil mithilfe eines Dienstprinzipals
-    - url: ./servers/onboard-dsc.md
-      text: Verbinden von Computern mit Azure mithilfe von PowerShell DSC
-    - url: ./servers/index.yml
-      text: Mehr anzeigen...
-  - title: Kubernetes mit Azure Arc-Aktivierung
-    imageSrc: ./media/01088-icon-arc-kubernetes-menu.svg
-    links:
-    - url: ./kubernetes/connect-cluster.md
-      text: Herstellen einer Clusterverbindung
-    - url: ./kubernetes/use-gitops-connected-cluster.md
-      text: Bereitstellen von Konfigurationen mithilfe von GitOps
-    - url: ./kubernetes/index.yml
-      text: Mehr anzeigen...
-  - title: Azure Arc-fähige Datendienste (Vorschauversion)
-    imageSrc: ./media/manage-756-azure-arc.svg
-    links:
-    - url: ./data/install-client-tools.md
-      text: Installieren von Tools
-    - url: ./data/create-sql-managed-instance.md
-      text: Erstellen einer verwalteten SQL-Instanz
-    - url: ./data/create-postgresql-hyperscale-server-group.md
-      text: Erstellen von PostgreSQL Hyperscale
-    - url: ./data/index.yml
-      text: Mehr anzeigen...
-  - title: Azure Arc-fähige SQL-Server-Instanz (Vorschauversion)
-    imageSrc: ./media/01850-icon-arc-sql-server-menu.svg
-    links:
-    - url: /sql/sql-server/azure-arc/assess
-      text: Bewerten Ihrer SQL-Instanzen
-    - url: /sql/sql-server/azure-arc/overview
-      text: Mehr anzeigen...
+    - title: Server mit Azure Arc-Unterstützung
+      imageSrc: ./media/manage-450-machines-azure-arc.svg
+      links:
+        - url: ./servers/onboard-portal.md
+          text: Verbinden von Computern mit Azure Arc über das Azure-Portal
+        - url: ./servers/onboard-service-principal.md
+          text: Verbinden von Computern im großen Stil mithilfe eines Dienstprinzipals
+        - url: ./servers/onboard-dsc.md
+          text: Verbinden von Computern mit Azure mithilfe von PowerShell DSC
+        - url: ./servers/index.yml
+          text: Mehr anzeigen...
+    - title: Kubernetes mit Azure Arc-Aktivierung
+      imageSrc: ./media/01088-icon-arc-kubernetes-menu.svg
+      links:
+        - url: ./kubernetes/quickstart-connect-cluster.md
+          text: Herstellen einer Clusterverbindung
+        - url: ./kubernetes/tutorial-use-gitops-connected-cluster.md
+          text: Bereitstellen von Konfigurationen mithilfe von GitOps
+        - url: ./kubernetes/index.yml
+          text: Mehr anzeigen...
+    - title: "Azure\_Arc-fähige Datendienste (Vorschauversion)"
+      imageSrc: ./media/manage-756-azure-arc.svg
+      links:
+        - url: ./data/install-client-tools.md
+          text: Installieren von Tools
+        - url: ./data/create-sql-managed-instance.md
+          text: Erstellen einer verwalteten SQL-Instanz
+        - url: ./data/create-postgresql-hyperscale-server-group.md
+          text: Erstellen von PostgreSQL Hyperscale
+        - url: ./data/index.yml
+          text: Mehr anzeigen...
+    - title: "Azure\_Arc-fähige SQL-Server-Instanz (Vorschauversion)"
+      imageSrc: ./media/01850-icon-arc-sql-server-menu.svg
+      links:
+        - url: /sql/sql-server/azure-arc/assess
+          text: Bewerten Ihrer SQL-Instanzen
+        - url: /sql/sql-server/azure-arc/overview
+          text: Mehr anzeigen...
 conceptualContent:
   title: Erste Schritte
   items:
-  - title: Server mit Azure Arc-Unterstützung
-    links:
-    - url: ./servers/learn/quick-enable-hybrid-vm.md
-      itemType: get-started
-      text: Server-Agents mit Azure Arc-Unterstützung
-    - url: ./servers/learn/tutorial-enable-vm-insights.md
-      itemType: tutorial
-      text: Überwachen eines Hybridcomputers mit Azure Monitor für VMs
-    - url: ./servers/policy-reference.md
-      itemType: learn
-      text: Zugangskontrollrichtlinien mit Azure Policy
-    - url: ./servers/manage-vm-extensions.md
-      itemType: how-to-guide
-      text: Verwalten und Verwenden von Azure-VM-Erweiterungen
-  - title: Kubernetes mit Azure Arc-Aktivierung
-    links:
-    - url: ./kubernetes/use-gitops-with-helm.md
-      itemType: deploy
-      text: Bereitstellen von Helm-Charts mithilfe von GitOps
-    - url: ./kubernetes/use-azure-policy.md
-      itemType: how-to-guide
-      text: Erzwingen von GitOps mithilfe von Azure Policy
-    - url: ../azure-monitor/containers/container-insights-enable-arc-enabled-clusters.md?toc=%2fazure%2fazure-arc%2ftoc.json
-      itemType: tutorial
-      text: Überwachen mithilfe von Azure Monitor für Container
-    - url: ../governance/policy/concepts/policy-for-kubernetes.md?toc=/azure/azure-arc/toc.json
-      itemType: learn
-      text: Zugangskontrollrichtlinien mit Azure Policy
-    - url: ./kubernetes/deploy-azure-iot-edge-workloads.md
-      itemType: deploy
-      text: Bereitstellen von Azure IoT Edge-Workloads
+    - title: Server mit Azure Arc-Unterstützung
+      links:
+        - url: ./servers/learn/quick-enable-hybrid-vm.md
+          itemType: get-started
+          text: Server-Agents mit Azure Arc-Unterstützung
+        - url: ./servers/learn/tutorial-enable-vm-insights.md
+          itemType: tutorial
+          text: Überwachen eines Hybridcomputers mit Azure Monitor für VMs
+        - url: ./servers/policy-reference.md
+          itemType: learn
+          text: Zugangskontrollrichtlinien mit Azure Policy
+        - url: ./servers/manage-vm-extensions.md
+          itemType: how-to-guide
+          text: Verwalten und Verwenden von Azure-VM-Erweiterungen
+    - title: Kubernetes mit Azure Arc-Aktivierung
+      links:
+        - url: ./kubernetes/use-gitops-with-helm.md
+          itemType: deploy
+          text: Bereitstellen von Helm-Charts mithilfe von GitOps
+        - url: ./kubernetes/use-azure-policy.md
+          itemType: how-to-guide
+          text: Erzwingen von GitOps mithilfe von Azure Policy
+        - url: ../azure-monitor/containers/container-insights-enable-arc-enabled-clusters.md?toc=%2fazure%2fazure-arc%2ftoc.json
+          itemType: tutorial
+          text: Überwachen mithilfe von Azure Monitor für Container
+        - url: ../governance/policy/concepts/policy-for-kubernetes.md?toc=/azure/azure-arc/toc.json
+          itemType: learn
+          text: Zugangskontrollrichtlinien mit Azure Policy
+        - url: ./kubernetes/deploy-azure-iot-edge-workloads.md
+          itemType: deploy
+          text: "Bereitstellen von Azure\_IoT\_Edge-Workloads"
