--- a/articles/azure-cache-for-redis/TOC.yml
+++ b/articles/azure-cache-for-redis/TOC.yml
@@ -19,6 +19,8 @@
       items:
         - name: ASP.NET-App
           href: cache-web-app-howto.md
+        - name: ASP.NET Core-App
+          href: cache-web-app-aspnet-core-howto.md
         - name: .NET Core-App
           href: cache-dotnet-core-quickstart.md
         - name: .NET-App
@@ -77,7 +79,7 @@
           displayName: 'regulatory, compliance, standards, domains'
           href: ./security-controls-policy.md
         - name: Sicherheitsbaseline
-          href: security-baseline.md
+          href: /security/benchmark/azure/baselines/azure-cache-for-redis-security-baseline?toc=/azure/azure-cache-for-redis/TOC.json
     - name: Cachingarchitektur
       href: /azure/architecture/best-practices/caching?toc=%2fazure%2fredis-cache%2ftoc.json
 - name: Anleitungen
