--- a/articles/azure-sql/migration-guides/index.yml
+++ b/articles/azure-sql/migration-guides/index.yml
@@ -14,12 +14,12 @@ metadata:
   ms.author: mathoma
   ms.reviewer: sstein
   ms.date: 11/06/2020
-  ms.openlocfilehash: ad10f236ed042d0935e01d056ef1a56de1054835
-  ms.sourcegitcommit: 4295037553d1e407edeb719a3699f0567ebf4293
+  ms.openlocfilehash: 1486b04f14d014e0d4915bfa197379a173fa7450
+  ms.sourcegitcommit: 18a91f7fe1432ee09efafd5bd29a181e038cee05
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 11/30/2020
-  ms.locfileid: "96327439"
+  ms.lasthandoff: 03/16/2021
+  ms.locfileid: "103563809"
 landingContent:
 - title: Azure SQL-Datenbank
   linkLists:
@@ -29,8 +29,16 @@ landingContent:
       url: database/sql-server-to-sql-database-overview.md
     - text: Aus SQL Server
       url: database/sql-server-to-sql-database-guide.md
+    - text: Aus Access
+      url: database/access-to-sql-database-guide.md
     - text: Aus DB2
       url: database/db2-to-sql-database-guide.md
+    - text: Aus Oracle
+      url: database/oracle-to-sql-database-guide.md
+    - text: Aus MySQL
+      url: database/mysql-to-sql-database-guide.md
+    - text: Aus SAP ASE
+      url: database/sap-ase-to-sql-database.md
 - title: Verwaltete Azure SQL-Instanz
   linkLists:
   - linkListType: get-started
@@ -41,6 +49,8 @@ landingContent:
       url: managed-instance/sql-server-to-managed-instance-guide.md
     - text: Aus DB2
       url: managed-instance/db2-to-managed-instance-guide.md
+    - text: Aus Oracle
+      url: managed-instance/oracle-to-managed-instance-guide.md
 - title: SQL Server auf Azure-VMs
   linkLists:
   - linkListType: get-started
@@ -51,6 +61,8 @@ landingContent:
       url: virtual-machines/sql-server-to-sql-on-azure-vm-individual-databases-guide.md
     - text: Aus DB2
       url: virtual-machines/db2-to-sql-on-azure-vm-guide.md
+    - text: Aus Oracle
+      url: virtual-machines/oracle-to-sql-on-azure-vm-guide.md
 - title: Migrationstools
   linkLists:
   - linkListType: deploy
