--- a/articles/frontdoor/TOC.yml
+++ b/articles/frontdoor/TOC.yml
@@ -41,7 +41,7 @@
     - name: Sicherheit
       items:
         - name: Sicherheitsbaseline
-          href: security-baseline.md
+          href: /security/benchmark/azure/baselines/front-door-security-baseline?toc=/azure/frontdoor/TOC.json
     - name: Back-Ends und Back-End-Pools
       href: front-door-backend-pool.md
     - name: Zwischenspeicherung mit Front Door
@@ -49,7 +49,7 @@
     - name: DDoS-Schutz
       href: front-door-ddos.md
     - name: 'Front Door: Häufig gestellte Fragen'
-      href: front-door-faq.md
+      href: front-door-faq.yml
     - name: Geofilterung
       href: front-door-geo-filtering.md
     - name: Integritätstests
@@ -99,7 +99,7 @@
 - name: Verweis
   items:
     - name: Azure CLI
-      href: /cli/azure/ext/front-door/
+      href: /cli/azure/afd/
     - name: Azure PowerShell
       href: /powershell/module/az.frontdoor
     - name: REST-API
