--- a/articles/marketplace/index.yml
+++ b/articles/marketplace/index.yml
@@ -10,19 +10,19 @@ metadata:
   author: mingshen-ms
   ms.author: mingshen
   ms.date: 09/02/2020
-  ms.openlocfilehash: 95903c1068d64545ae025fb5899a80014b8f26f2
-  ms.sourcegitcommit: ad83be10e9e910fd4853965661c5edc7bb7b1f7c
+  ms.openlocfilehash: 2610013e7f5c2ee856a6fb1cd10fe4aebcbeb4c5
+  ms.sourcegitcommit: 52491b361b1cd51c4785c91e6f4acb2f3c76f0d5
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 12/06/2020
-  ms.locfileid: "96746385"
+  ms.lasthandoff: 04/30/2021
+  ms.locfileid: "108318979"
 landingContent:
 - title: Verwenden des kommerziellen Marketplace
   linkLists:
   - linkListType: get-started
     links:
     - text: Erstellen eines neuen Kontos
-      url: ./partner-center-portal/create-account.md
+      url: create-account.md
     - text: Bestimmung Ihrer Veröffentlichungsoption
       url: ./determine-your-listing-type.md
     - text: Richtlinien und Nutzungsbedingungen
@@ -31,6 +31,8 @@ landingContent:
       url: ./marketplace-faq-publisher-guide.md
     - text: Microsoft-Herausgebervereinbarung
       url: https://go.microsoft.com/fwlink/?LinkID=699560
+    - text: Neues
+      url: what-is-new.md
 - title: Gängige Szenarien und Aufgaben
   linkLists:
   - linkListType: overview
@@ -46,9 +48,9 @@ landingContent:
     - text: Kundenleads aus Ihrem Marketplace-Angebot
       url: ./partner-center-portal/commercial-marketplace-get-customer-leads.md
     - text: Co-Selling-Option im kommerziellen Marketplace
-      url: commercial-marketplace-co-sell.md
+      url: ./co-sell-configure.md
     - text: Partner-Engagement für Co-Selling
-      url: ./marketplace-co-sell.md
+      url: ./co-sell-overview.md
     - text: Stellen Sie Lösungen in Microsoft AppSource und innerhalb von Office bereit.
       url: /office/dev/store/submit-to-appsource-via-partner-center
     - text: Beteiligen Sie sich an den Azure Marketplace- und AppSource-Communityforen.
@@ -77,17 +79,17 @@ landingContent:
   linkLists:
   - linkListType: how-to-guide
     links:
-    - text: SaaS-Angebote
+    - text: SaaS
       url: plan-saas-offer.md
-    - text: Angebote für virtuelle Computer
+    - text: Virtuelle Computer
       url: ./marketplace-virtual-machines.md
-    - text: Azure-Anwendungsangebote
+    - text: Azure-Anwendungen
       url: ./create-new-azure-apps-offer.md
-    - text: Angebote für Dynamics 365 for Customer Engagement & PowerApps
-      url: ./partner-center-portal/create-new-customer-engagement-offer.md
-    - text: Angebote für Dynamics 365 Business Central
+    - text: Dynamics 365 for Customer Engagement und Power Apps
+      url: dynamics-365-customer-engage-offer-setup.md
+    - text: Dynamics 365 Business Central
       url: ./partner-center-portal/create-new-business-central-offer.md
-    - text: Angebote für Dynamics 365 for Operations
+    - text: Dynamics 365 for Operations
       url: ./partner-center-portal/create-new-operations-offer.md
     - text: Weitere Angebotsarten
       url: ./publisher-guide-by-offer-type.md
