--- a/articles/storage/tables/TOC.yml
+++ b/articles/storage/tables/TOC.yml
@@ -56,7 +56,7 @@
           displayName: 'regulatory, compliance, standards, domains'
           href: ../common/security-controls-policy.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
         - name: Sicherheitsbaseline
-          href: ../common/security-baseline.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
+          href: /security/benchmark/azure/baselines/storage-security-baseline?toc=%2fazure%2fstorage%2ftables%2ftoc.json?toc=/azure/storage/tables/TOC.json
     - name: Datenredundanz
       href: ../common/storage-redundancy.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
     - name: Notfallwiederherstellung und Failover
