--- a/articles/virtual-machines/windows/sqlclassic/TOC.yml
+++ b/articles/virtual-machines/windows/sqlclassic/TOC.yml
@@ -29,13 +29,13 @@
         - name: Verwenden von Azure Storage für Sicherung und Wiederherstellung
           href: ../../../azure-sql/virtual-machines/windows/azure-storage-sql-server-backup-restore-use.md?toc=/azure/virtual-machines/windows/sqlclassic/toc.json
     - name: Bewährte Methoden für Leistung
-      href: ../../../azure-sql/virtual-machines/windows/performance-guidelines-best-practices.md?toc=/azure/virtual-machines/windows/sqlclassic/toc.json
+      href: ../../../azure-sql/virtual-machines/windows/performance-guidelines-best-practices-checklist.md?toc=%2fazure%2fvirtual-machines%2fwindows%2fsqlclassic%2ftoc.json
     - name: Anwendungsmuster
       href: ../../../azure-sql/virtual-machines/windows/application-patterns-development-strategies.md?toc=/azure/virtual-machines/windows/sqlclassic/toc.json
 - name: Verweis
   items:
     - name: Azure PowerShell
-      href: /powershell/azure/?view=azuresmps-3.7.0
+      href: /powershell/azure/
     - name: Azure CLI
       href: /cli/azure/
     - name: T-SQL
