--- a/articles/virtual-network/index.yml
+++ b/articles/virtual-network/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: KumudD
   ms.author: kumud
   ms.date: 01/28/2021
-  ms.openlocfilehash: 11e3de57bdf2853e94ec61a21ab54ae085f4f6b1
-  ms.sourcegitcommit: 1a98b3f91663484920a747d75500f6d70a6cb2ba
+  ms.openlocfilehash: ada227d0746b49ba73b6bea2104d3a7adcbaa1c5
+  ms.sourcegitcommit: d40ffda6ef9463bb75835754cabe84e3da24aab5
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 01/29/2021
-  ms.locfileid: "99062145"
+  ms.lasthandoff: 04/07/2021
+  ms.locfileid: "107027464"
 landingContent:
 - title: Informationen zu Virtual Network
   linkLists:
@@ -64,10 +64,6 @@ landingContent:
     links:
     - text: Schützen und Isolieren des Zugriffs auf Azure-Ressourcen
       url: /learn/modules/secure-and-isolate-with-nsg-and-service-endpoints
-  - linkListType: video
-    links:
-    - text: Sicherer Zugriff auf Ihre Azure-PaaS-Ressourcen mit Azure Private Link
-      url: https://www.youtube.com/watch?v=PWKM5KXjWno
 - title: Herstellen von Verbindungen zwischen virtuellen Netzwerken
   linkLists:
   - linkListType: concept
@@ -104,6 +100,10 @@ landingContent:
     links:
     - text: Weiterleiten von Netzwerkdatenverkehr – Portal
       url: tutorial-create-route-table-portal.md
+  - linkListType: learn
+    links:
+    - text: Verwalten und Steuern des Datenverkehrsflusses mit Routen in Ihrer Azure-Bereitstellung
+      url: /learn/modules/control-network-traffic-flow-with-routes/
 - title: Erstellen von IP-Adressen
   linkLists:
   - linkListType: concept
