--- a/articles/cdn/TOC.yml
+++ b/articles/cdn/TOC.yml
@@ -13,7 +13,7 @@
     - name: Erstellen eines Profils und Endpunkts
       href: cdn-create-new-endpoint.md
     - name: 'Erstellen eines Profils und eines Endpunkts: ARM-Vorlage'
-      displayName: Resource Manager
+      displayName: 'Resource Manager, az group, az deployment group, New-AzResourceGroup, New-AzResourceGroupDeployment, Remove-AzResourceGroup'
       href: create-profile-endpoint-template.md
 - name: Tutorials
   items:
@@ -31,12 +31,17 @@
   items:
     - name: Codebeispiele
       href: 'https://azure.microsoft.com/resources/samples/?service=cdn'
+    - name: Azure CLI
+      items:
+        - name: Erstellen eines Profils und Endpunkts
+          displayName: 'az cdn profile, az cdn endpoint, az cdn origin, az cdn custom-domain, cdn origin-group'
+          href: ./scripts/cli/cdn-azure-cli-create-endpoint.md
 - name: Konzepte
   items:
     - name: Sicherheit
       items:
         - name: Sicherheitsbaseline
-          href: security-baseline.md
+          href: /security/benchmark/azure/baselines/content-delivery-network-security-baseline?toc=/azure/cdn/TOC.json
     - name: Funktionsweise der Zwischenspeicherung
       href: cdn-how-caching-works.md
     - name: 'Inhaltsbereitstellung: China'
@@ -172,6 +177,8 @@
           href: cdn-http-debug-headers.md
     - name: Microsoft-spezifische HTTP-Header
       href: cdn-msft-http-debug-headers.md
+    - name: Azure CLI
+      href: /cli/azure/cdn
     - name: Azure PowerShell
       href: /powershell/module/az.cdn
     - name: .NET
