--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -44,7 +44,7 @@
               displayName: 'regulatory, compliance, standards, domains'
               href: ./security-controls-policy.md
             - name: Sicherheitsbaseline
-              href: security-baseline.md
+              href: /security/benchmark/azure/baselines/container-registry-security-baseline?toc=/azure/container-registry/TOC.json
         - name: Dienstebenen und Grenzwerte für die Containerregistrierung
           href: container-registry-skus.md
         - name: 'Registrierungen, Repositorys und Images'
