--- a/articles/key-vault/index.yml
+++ b/articles/key-vault/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:Hub
 title: Azure-Schlüsseltresor
-summary: Hier erfahren Sie, wie Sie mithilfe von Key Vault Schlüssel für den Zugriff auf und die Verschlüsselung von Cloudressourcen, Apps und Lösungen erstellen und verwalten. Tutorials, API-Referenzen und mehr.
+summary: 'Hier erfahren Sie, wie Sie mithilfe von Key Vault Schlüssel für den Zugriff auf und die Verschlüsselung von Cloudressourcen, Apps und Lösungen erstellen und verwalten. Tutorials, API-Referenzen und mehr.'
 brand: azure
 metadata:
   title: Dokumentation zu Azure Key Vault
-  description: Hier erfahren Sie, wie Sie mithilfe von Key Vault Schlüssel für den Zugriff auf und die Verschlüsselung von Cloudressourcen, Apps und Lösungen erstellen und verwalten. Tutorials, API-Referenzen und mehr.
+  description: 'Hier erfahren Sie, wie Sie mithilfe von Key Vault Schlüssel für den Zugriff auf und die Verschlüsselung von Cloudressourcen, Apps und Lösungen erstellen und verwalten. Tutorials, API-Referenzen und mehr.'
   services: key-vault
   ms.service: key-vault
   ms.subservice: na
@@ -13,158 +13,152 @@ metadata:
   author: msmbaldwin
   ms.author: mbaldwin
   ms.date: 04/07/2020
-  ms.openlocfilehash: 55495d690511c1ebfbd81b80ad9c99d76e708146
-  ms.sourcegitcommit: 7edadd4bf8f354abca0b253b3af98836212edd93
-  ms.translationtype: HT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 03/10/2021
-  ms.locfileid: "102566408"
 highlightedContent:
   items:
-  - title: Einführung in Azure Key Vault
-    itemType: overview
-    url: ./general/overview.md
-  - title: Wichtige Updates für den Dienst
-    itemType: whats-new
-    url: ./general/whats-new.md
-  - title: Authentifizierung
-    itemType: overview
-    url: ./general/authentication.md
-  - title: Grundlegende Konzepte
-    itemType: overview
-    url: ./general/basic-concepts.md
-  - title: Protokollierung
-    itemType: overview
-    url: ./general/logging.md
-  - title: Drosselung
-    itemType: overview
-    url: ./general/overview-throttling.md
+    - title: Einführung in Azure Key Vault
+      itemType: overview
+      url: ./general/overview.md
+    - title: Wichtige Updates für den Dienst
+      itemType: whats-new
+      url: ./general/whats-new.md
+    - title: Authentifizierung
+      itemType: overview
+      url: ./general/authentication.md
+    - title: Grundlegende Konzepte
+      itemType: overview
+      url: ./general/basic-concepts.md
+    - title: Protokollierung
+      itemType: overview
+      url: ./general/logging.md
+    - title: Drosselung
+      itemType: overview
+      url: ./general/overview-throttling.md
 conceptualContent:
   items:
-  - title: Zertifikate
-    links:
-    - url: ./certificates/about-certificates.md
-      itemType: overview
-      text: Informationen zu Zertifikaten
-    - url: ./certificates/quick-create-portal.md
-      itemType: quickstart
-      text: Festlegen und Abrufen eines Zertifikats aus Azure Key Vault mit dem Azure-Portal
-    - url: ./certificates/certificate-scenarios.md
-      itemType: overview
-      text: Erste Schritte mit Key Vault-Zertifikaten
-    - url: ./certificates/create-certificate-scenarios.md
-      itemType: overview
-      text: Überwachen und Verwalten der Zertifikaterstellung
-    footerLink:
-      url: ./certificates/index.yml
-      text: Weitere Informationen
-  - title: Schlüssel
-    links:
-    - url: ./keys/about-keys.md
-      itemType: overview
-      text: Informationen zu Schlüsseln
-    - url: ../security/fundamentals/encryption-atrest.md
-      itemType: overview
-      text: Datenverschlüsselung
-    - url: ./keys/quick-create-portal.md
-      itemType: quickstart
-      text: Festlegen eines Schlüssels und Abrufen des Schlüssels aus Azure Key Vault mit dem Azure-Portal
-    - url: ./keys/hsm-protected-keys.md
-      itemType: overview
-      text: Importieren von durch HSM geschützten Schlüsseln (Übersicht)
-    footerLink:
-      url: ./keys/index.yml
-      text: Weitere Informationen
-  - title: Geheimnisse
-    links:
-    - url: ./secrets/about-secrets.md
-      itemType: overview
-      text: Informationen zu Geheimnissen
-    - url: ./secrets/quick-create-portal.md
-      itemType: quickstart
-      text: Festlegen eines Geheimnisses und Abrufen des Geheimnisses aus Azure Key Vault mithilfe des Azure-Portals
-    - url: ./secrets/tutorial-rotation.md
-      itemType: tutorial
-      text: Rotieren von Geheimnissen für Einzelbenutzerressourcen
-    footerLink:
-      url: ./secrets/index.yml
-      text: Weitere Informationen
-  - title: Verwaltetes HSM (Vorschauversion)
-    links:
-    - url: ./managed-hsm/overview.md
-      itemType: overview
-      text: Was ist verwaltetes HSM?
-    - url: ./managed-hsm/best-practices.md
-      itemType: overview
-      text: Bewährte Methoden
-    - url: ./managed-hsm/quick-create-cli.md
-      itemType: quickstart
-      text: Bereitstellen und Aktivieren eines verwalteten HSM
-    footerLink:
-      text: Weitere Informationen
-      url: ./managed-hsm/index.yml
-  - title: Clientbibliotheken
-    links:
-    - url: ./general/client-libraries.md
-      itemType: reference
-      text: Clientbibliotheken für Azure Key Vault
-    - url: /dotnet/api/overview/azure/key-vault
-      itemType: reference
-      text: .NET-Clientbibliothek
-    - url: /python/api/overview/azure/key-vault-index
-      itemType: reference
-      text: Python-Clientbibliothek
-    - url: https://azure.github.io/azure-sdk-for-java/keyvault.html
-      itemType: reference
-      text: Java-Clientbibliothek
-    - url: /javascript/api/overview/azure/key-vault-index
-      itemType: reference
-      text: Node.js-Clientbibliothek
-  - title: Key Vault mit Speicher
-    links:
-    - url: ./secrets/overview-storage-keys.md
-      itemType: overview
-      text: 'Verwalten von Speicherschlüsseln: Befehlszeilenschnittstelle'
-    - url: ./secrets/overview-storage-keys-powershell.md
-      itemType: overview
-      text: 'Verwalten von Speicherschlüsseln: PowerShell'
-    - url: ./secrets/storage-keys-sas-tokens-code.md
-      itemType: overview
-      text: Abrufen von SAS-Token in Code
-  - title: Key Vault mit virtuellen Computern
-    links:
-    - url: ../virtual-machines/extensions/key-vault-windows.md
-      itemType: overview
-      text: 'Azure Key Vault-VM-Erweiterung: Windows'
-    - url: ../virtual-machines/extensions/key-vault-linux.md
-      itemType: overview
-      text: 'Azure Key Vault-VM-Erweiterung: Linux'
-    - url: /azure/developer/ansible/key-vault-configure-vm-security
-      itemType: overview
-      text: Key Vault mit Linux-VMs in Ansible
-    - url: ../virtual-machines/windows/disk-encryption-key-vault.md
-      itemType: overview
-      text: 'Key Vault mit Azure Disk Encryption: Windows'
-    - url: ../virtual-machines/linux/disk-encryption-key-vault.md
-      itemType: overview
-      text: 'Key Vault mit Azure Disk Encryption: Linux'
-    - url: ../virtual-machine-scale-sets/disk-encryption-key-vault.md
-      itemType: overview
-      text: Key Vault mit Virtual Machine Scale Sets
-  - title: Schlüsseltresor-Integration
-    links:
-    - url: /azure/devops/pipelines/library/variable-groups?tabs=yaml#link-secrets-from-an-azure-key-vault
-      itemType: overview
-      text: 'Azure Dev Ops: Verweisen auf Key Vault-Geheimnisse in Azure Pipelines'
-    - url: ../app-service/app-service-key-vault-references.md
-      itemType: overview
-      text: 'App Services: Verweisen auf Key Vault-Geheimnisse in App Services'
-    - url: ../app-service/configure-ssl-certificate.md#store-in-azure-key-vault
-      itemType: overview
-      text: 'App Services: Verwalten von App Service-Zertifikaten in Key Vault'
-    - url: ../aks/developer-best-practices-pod-security.md#use-azure-key-vault-with-secrets-store-csi-driver
-      itemType: overview
-      text: 'Azure Kubernetes Service: Verwenden von Key Vault-Geheimnissen, Zertifikaten und Schlüsseln in AKS'
-    - url: /azure/databricks/security/secrets/secret-scopes
-      itemType: overview
-      text: 'Azure Databricks: Geheimnisverwaltung mit Key Vault'
+    - title: Zertifikate
+      links:
+        - url: ./certificates/about-certificates.md
+          itemType: overview
+          text: Informationen zu Zertifikaten
+        - url: ./certificates/quick-create-portal.md
+          itemType: quickstart
+          text: Festlegen und Abrufen eines Zertifikats aus Azure Key Vault mit dem Azure-Portal
+        - url: ./certificates/certificate-scenarios.md
+          itemType: overview
+          text: Erste Schritte mit Key Vault-Zertifikaten
+        - url: ./certificates/create-certificate-scenarios.md
+          itemType: overview
+          text: Überwachen und Verwalten der Zertifikaterstellung
+      footerLink:
+        url: ./certificates/index.yml
+        text: Weitere Informationen
+    - title: Schlüssel
+      links:
+        - url: ./keys/about-keys.md
+          itemType: overview
+          text: Informationen zu Schlüsseln
+        - url: ../security/fundamentals/encryption-atrest.md
+          itemType: overview
+          text: Datenverschlüsselung
+        - url: ./keys/quick-create-portal.md
+          itemType: quickstart
+          text: Festlegen eines Schlüssels und Abrufen des Schlüssels aus Azure Key Vault mit dem Azure-Portal
+        - url: ./keys/hsm-protected-keys.md
+          itemType: overview
+          text: Importieren von durch HSM geschützten Schlüsseln (Übersicht)
+      footerLink:
+        url: ./keys/index.yml
+        text: Weitere Informationen
+    - title: Geheimnisse
+      links:
+        - url: ./secrets/about-secrets.md
+          itemType: overview
+          text: Informationen zu Geheimnissen
+        - url: ./secrets/quick-create-portal.md
+          itemType: quickstart
+          text: Festlegen eines Geheimnisses und Abrufen des Geheimnisses aus Azure Key Vault mithilfe des Azure-Portals
+        - url: ./secrets/tutorial-rotation.md
+          itemType: tutorial
+          text: Rotieren von Geheimnissen für Einzelbenutzerressourcen
+      footerLink:
+        url: ./secrets/index.yml
+        text: Weitere Informationen
+    - title: Verwaltetes HSM
+      links:
+        - url: ./managed-hsm/overview.md
+          itemType: overview
+          text: Was ist verwaltetes HSM?
+        - url: ./managed-hsm/best-practices.md
+          itemType: overview
+          text: Bewährte Methoden
+        - url: ./managed-hsm/quick-create-cli.md
+          itemType: quickstart
+          text: Bereitstellen und Aktivieren eines verwalteten HSM
+      footerLink:
+        text: Weitere Informationen
+        url: ./managed-hsm/index.yml
+    - title: Clientbibliotheken
+      links:
+        - url: ./general/client-libraries.md
+          itemType: reference
+          text: Clientbibliotheken für Azure Key Vault
+        - url: /dotnet/api/overview/azure/key-vault
+          itemType: reference
+          text: .NET-Clientbibliothek
+        - url: /python/api/overview/azure/key-vault-index
+          itemType: reference
+          text: Python-Clientbibliothek
+        - url: 'https://azure.github.io/azure-sdk-for-java/keyvault.html'
+          itemType: reference
+          text: Java-Clientbibliothek
+        - url: /javascript/api/overview/azure/key-vault-index
+          itemType: reference
+          text: Node.js-Clientbibliothek
+    - title: Key Vault mit Speicher
+      links:
+        - url: ./secrets/overview-storage-keys.md
+          itemType: overview
+          text: 'Verwalten von Speicherschlüsseln: Befehlszeilenschnittstelle'
+        - url: ./secrets/overview-storage-keys-powershell.md
+          itemType: overview
+          text: 'Verwalten von Speicherschlüsseln: PowerShell'
+        - url: ./secrets/storage-keys-sas-tokens-code.md
+          itemType: overview
+          text: Abrufen von SAS-Token in Code
+    - title: Key Vault mit virtuellen Computern
+      links:
+        - url: ../virtual-machines/extensions/key-vault-windows.md
+          itemType: overview
+          text: "Azure\_Key\_Vault-VM-Erweiterung: Windows"
+        - url: ../virtual-machines/extensions/key-vault-linux.md
+          itemType: overview
+          text: "Azure\_Key\_Vault-VM-Erweiterung: Linux"
+        - url: /azure/developer/ansible/key-vault-configure-vm-security
+          itemType: overview
+          text: Key Vault mit Linux-VMs in Ansible
+        - url: ../virtual-machines/windows/disk-encryption-key-vault.md
+          itemType: overview
+          text: 'Key Vault mit Azure Disk Encryption: Windows'
+        - url: ../virtual-machines/linux/disk-encryption-key-vault.md
+          itemType: overview
+          text: 'Key Vault mit Azure Disk Encryption: Linux'
+        - url: ../virtual-machine-scale-sets/disk-encryption-key-vault.md
+          itemType: overview
+          text: Key Vault mit Virtual Machine Scale Sets
+    - title: Schlüsseltresor-Integration
+      links:
+        - url: /azure/devops/pipelines/library/variable-groups?tabs=yaml#link-secrets-from-an-azure-key-vault
+          itemType: overview
+          text: "Azure Dev Ops: Verweisen auf Key\_Vault-Geheimnisse in Azure Pipelines"
+        - url: ../app-service/app-service-key-vault-references.md
+          itemType: overview
+          text: "App Services: Verweisen auf Key\_Vault-Geheimnisse in App Services"
+        - url: ../app-service/configure-ssl-certificate.md#store-in-azure-key-vault
+          itemType: overview
+          text: "App Services: Verwalten von App\_Service-Zertifikaten in Key Vault"
+        - url: ../aks/developer-best-practices-pod-security.md#use-azure-key-vault-with-secrets-store-csi-driver
+          itemType: overview
+          text: "Azure Kubernetes Service: Verwenden von Key\_Vault-Geheimnissen, Zertifikaten und Schlüsseln in AKS"
+        - url: /azure/databricks/security/secrets/secret-scopes
+          itemType: overview
+          text: 'Azure Databricks: Geheimnisverwaltung mit Key Vault'
