--- a/articles/spring-cloud/index.yml
+++ b/articles/spring-cloud/index.yml
@@ -11,71 +11,71 @@ metadata:
   author: bmitchell287
   ms.author: brendm
   ms.date: 09/26/2019
-  ms.openlocfilehash: 7598345ca1d687b8148b41454077ab5fca91e8f1
-  ms.sourcegitcommit: 80c1056113a9d65b6db69c06ca79fa531b9e3a00
+  ms.openlocfilehash: ce74f1020a064b558c647bad488ba0efa8be7620
+  ms.sourcegitcommit: 42e4f986ccd4090581a059969b74c461b70bcac0
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 12/09/2020
-  ms.locfileid: "96903946"
+  ms.lasthandoff: 03/23/2021
+  ms.locfileid: "104869071"
 landingContent:
 - title: Informationen zu Azure Spring Cloud
   linkLists:
   - linkListType: overview
     links:
     - text: Was ist Azure Spring Cloud?
-      url: spring-cloud-overview.md
+      url: overview.md
     - text: Grundlegendes zu Azure Spring Cloud-Kontingenten und -Grenzwerten
-      url: spring-cloud-quotas.md
+      url: quotas.md
 - title: Erste Schritte
   linkLists:
   - linkListType: quickstart
     links:
     - text: 'Schnellstart: Bereitstellen Ihrer ersten Azure Spring Cloud-Anwendung'
-      url: spring-cloud-quickstart.md
+      url: quickstart.md
     - text: Einführung in die Beispiel-App PiggyMetrics
-      url: spring-cloud-quickstart-sample-app-introduction.md
+      url: quickstart-sample-app-introduction.md
   - linkListType: tutorial
     links:
     - text: Vorbereiten einer Spring- oder Steeltoe-App für die Bereitstellung
-      url: spring-cloud-tutorial-prepare-app-deployment.md
+      url: how-to-prepare-app-deployment.md
 - title: Konfigurieren Ihres Diensts
   linkLists:
   - linkListType: tutorial
     links:
     - text: Verwenden des Konfigurationsservers zum Verwalten der Anwendungskonfiguration
-      url: spring-cloud-tutorial-config-server.md
+      url: how-to-config-server.md
     - text: Manuelles Skalieren Ihrer Anwendung
-      url: spring-cloud-tutorial-scale-manual.md
+      url: how-to-scale-manual.md
   - linkListType: how-to-guide
     links:
     - text: Automatisieren Ihrer CI/CD-Pipeline in Azure Spring Cloud
-      url: spring-cloud-howto-cicd.md
+      url: how-to-cicd.md
     - text: Ermöglichen von Blaugrün-Bereitstellungen mit Azure Spring Cloud
-      url: spring-cloud-howto-staging-environment.md
+      url: how-to-staging-environment.md
     - text: Verwenden von beständigem Speicher in Azure Spring Cloud
-      url: spring-cloud-howto-persistent-storage.md
+      url: how-to-persistent-storage.md
 - title: Überwachen Ihrer Anwendung
   linkLists:
   - linkListType: tutorial
     links:
     - text: Überwachen Ihrer Anwendung mit verteilter Ablaufverfolgung und App Insights
-      url: spring-cloud-tutorial-distributed-tracing.md
+      url: how-to-distributed-tracing.md
     - text: Aktivieren von Diagnosediensten in Ihrer Java Spring-Anwendung
       url: diagnostic-services.md
   - linkListType: concept
     links:
     - text: Grundlegendes zu Azure Monitor-Metriken für Spring Cloud
-      url: spring-cloud-concept-metrics.md
+      url: concept-metrics.md
 - title: Binden an andere Dienste
   linkLists:
   - linkListType: tutorial
     links:
     - text: Binden Ihrer Anwendung an Azure Cache for Redis
-      url: spring-cloud-tutorial-bind-redis.md
+      url: how-to-bind-redis.md
     - text: Binden Ihrer Anwendung an eine Azure MySQL-Datenbank
-      url: spring-cloud-tutorial-bind-mysql.md
+      url: how-to-bind-mysql.md
     - text: Binden Ihrer Anwendung an Azure Cosmos DB
-      url: spring-cloud-tutorial-bind-cosmos.md
+      url: how-to-bind-cosmos.md
 - title: API-Verweis
   linkLists:
   - linkListType: reference
